CDS-2198 Resolved tile overlapping issue.

--- a/app/assets/stylesheets/components/cms/full-bleed-image-right-tile.scss
+++ b/app/assets/stylesheets/components/cms/full-bleed-image-right-tile.scss
@@ -1,5 +1,5 @@
 .tile-container {
-  height: 534px;
+  min-height: 534px;
   padding: 0;
   $tc: &;
 
@@ -17,6 +17,10 @@
     #{$tc}__title {
       margin: 30px 0 10px;
     }
+
+    @media screen and (max-width: $screen-xs-max) {
+      padding: 20px 30px !important;
+    }
   }
 
   &__image {
@@ -27,5 +31,17 @@
       height: auto;
       max-width: 100%;
     }
+
+    &.img-full-new:last-child {
+      margin: 0;
+    }
+
+    &.img-full-new:first-child {
+      margin: 0;
+    }
+  }
+
+  @media screen and (max-width: $screen-xs-max) {
+    margin: 30px -12px;
   }
 }
